[redesign] Fix CSS bug on mobile

--- a/_sass/_section-image.scss
+++ b/_sass/_section-image.scss
@@ -42,7 +42,7 @@
 }
 
 @media(max-width: 639px) {
-  .image-wrap {
+  .section-image-wrap {
     height: 300px;
     padding-top: 60px;
     h1 {
